エディタのみ公開 + README更新

--- a/index.html
+++ b/index.html
@@ -1,351 +1,8 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SRT → FCPXML | Final Cut Pro 字幕変換ツール</title>
-    <meta name="description" content="SRT字幕ファイルをFinal Cut Pro用のFCPXMLに変換。動画プレビュー付きの字幕エディタも搭載。完全無料・ブラウザ完結。">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap');
-
-        :root {
-            --bg: #0a0a0a;
-            --surface: #161616;
-            --card: #1c1c1e;
-            --border: #2a2a2a;
-            --accent: #4e8ef7;
-            --accent-glow: rgba(78, 142, 247, 0.15);
-            --purple: #a77bfa;
-            --green: #42d77d;
-            --text: #e5e5ea;
-            --text-secondary: #98989f;
-            --text-dim: #636366;
-        }
-
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: var(--bg);
-            color: var(--text);
-            font-family: 'Inter', 'Noto Sans JP', -apple-system, sans-serif;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .hero {
-            max-width: 720px;
-            width: 100%;
-            padding: 80px 24px 40px;
-            text-align: center;
-        }
-
-        .hero-icon {
-            width: 64px;
-            height: 64px;
-            background: linear-gradient(135deg, var(--accent), var(--purple));
-            border-radius: 16px;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 28px;
-            font-weight: 700;
-            color: #fff;
-            margin-bottom: 24px;
-            box-shadow: 0 8px 32px rgba(78, 142, 247, 0.3);
-        }
-
-        .hero h1 {
-            font-size: 32px;
-            font-weight: 700;
-            letter-spacing: -0.02em;
-            margin-bottom: 12px;
-            background: linear-gradient(135deg, var(--text) 0%, var(--text-secondary) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        .hero p {
-            font-size: 15px;
-            color: var(--text-secondary);
-            line-height: 1.7;
-            margin-bottom: 8px;
-        }
-
-        .badge-row {
-            display: flex;
-            justify-content: center;
-            gap: 8px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
-
-        .badge {
-            font-size: 11px;
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-weight: 500;
-            border: 1px solid var(--border);
-            color: var(--text-dim);
-            background: var(--surface);
-        }
-
-        .badge.green {
-            color: var(--green);
-            border-color: rgba(66, 215, 125, 0.3);
-        }
-
-        .cards {
-            max-width: 720px;
-            width: 100%;
-            padding: 0 24px 40px;
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-        }
-
-        .card {
-            background: var(--card);
-            border: 1px solid var(--border);
-            border-radius: 16px;
-            padding: 28px;
-            text-decoration: none;
-            color: inherit;
-            transition: all 0.2s;
-            display: block;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 2px;
-            background: linear-gradient(90deg, var(--accent), var(--purple));
-            opacity: 0;
-            transition: opacity 0.2s;
-        }
-
-        .card:hover {
-            border-color: var(--accent);
-            transform: translateY(-2px);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-        }
-
-        .card:hover::before {
-            opacity: 1;
-        }
-
-        .card-header {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            margin-bottom: 12px;
-        }
-
-        .card-emoji {
-            font-size: 24px;
-        }
-
-        .card-title {
-            font-size: 17px;
-            font-weight: 600;
-        }
-
-        .card-arrow {
-            margin-left: auto;
-            font-size: 18px;
-            color: var(--text-dim);
-            transition: all 0.2s;
-        }
-
-        .card:hover .card-arrow {
-            color: var(--accent);
-            transform: translateX(4px);
-        }
-
-        .card-desc {
-            font-size: 13px;
-            color: var(--text-secondary);
-            line-height: 1.6;
-            margin-bottom: 16px;
-        }
-
-        .card-features {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 6px;
-        }
-
-        .feature-tag {
-            font-size: 10px;
-            padding: 3px 10px;
-            border-radius: 4px;
-            background: var(--surface);
-            color: var(--text-dim);
-            border: 1px solid var(--border);
-        }
-
-        .section-title {
-            max-width: 720px;
-            width: 100%;
-            padding: 20px 24px 12px;
-            font-size: 12px;
-            font-weight: 600;
-            color: var(--text-dim);
-            text-transform: uppercase;
-            letter-spacing: 0.08em;
-        }
-
-        .info-grid {
-            max-width: 720px;
-            width: 100%;
-            padding: 0 24px 60px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 12px;
-        }
-
-        .info-card {
-            background: var(--surface);
-            border: 1px solid var(--border);
-            border-radius: 10px;
-            padding: 16px;
-        }
-
-        .info-card h3 {
-            font-size: 12px;
-            font-weight: 600;
-            color: var(--text-secondary);
-            margin-bottom: 6px;
-        }
-
-        .info-card p {
-            font-size: 11px;
-            color: var(--text-dim);
-            line-height: 1.5;
-        }
-
-        .footer {
-            padding: 24px;
-            text-align: center;
-            font-size: 11px;
-            color: var(--text-dim);
-            border-top: 1px solid var(--border);
-            width: 100%;
-        }
-
-        .footer a {
-            color: var(--accent);
-            text-decoration: none;
-        }
-
-        @media (max-width: 500px) {
-            .hero {
-                padding: 48px 20px 24px;
-            }
-
-            .hero h1 {
-                font-size: 24px;
-            }
-
-            .info-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <meta http-equiv="refresh" content="0;url=srt-editor.html">
 </head>
-
-<body>
-
-    <div class="hero">
-        <div class="hero-icon">S</div>
-        <h1>SRT → FCPXML 変換ツール</h1>
-        <p>SRT字幕ファイルをFinal Cut Pro用のFCPXMLに変換。<br>動画プレビュー付きの字幕エディタも搭載。</p>
-        <div class="badge-row">
-            <span class="badge green">✓ 完全無料</span>
-            <span class="badge green">✓ ブラウザ完結</span>
-            <span class="badge green">✓ アップロードなし</span>
-            <span class="badge green">✓ オフライン対応</span>
-        </div>
-    </div>
-
-    <div class="section-title">ツールを選択</div>
-
-    <div class="cards">
-        <a class="card" href="srt-editor.html">
-            <div class="card-header">
-                <span class="card-emoji">✏️</span>
-                <span class="card-title">字幕エディタ（おすすめ）</span>
-                <span class="card-arrow">→</span>
-            </div>
-            <div class="card-desc">
-                動画を見ながら字幕を編集し、そのままFCPXMLに書き出せるオールインワンエディタ。
-                字幕の修正・分割・結合が直感的に操作できます。
-            </div>
-            <div class="card-features">
-                <span class="feature-tag">動画プレビュー</span>
-                <span class="feature-tag">テキスト編集</span>
-                <span class="feature-tag">分割・結合</span>
-                <span class="feature-tag">タイムコード調整</span>
-                <span class="feature-tag">自動保存</span>
-                <span class="feature-tag">FCPXML書き出し</span>
-            </div>
-        </a>
-
-        <a class="card" href="srt-to-fcpxml.html">
-            <div class="card-header">
-                <span class="card-emoji">🔄</span>
-                <span class="card-title">シンプル変換</span>
-                <span class="card-arrow">→</span>
-            </div>
-            <div class="card-desc">
-                SRTファイルをドロップしてすぐにFCPXMLに変換。
-                編集不要でそのまま使いたい場合に。複数ファイルの一括変換にも対応。
-            </div>
-            <div class="card-features">
-                <span class="feature-tag">一括変換</span>
-                <span class="feature-tag">フレームオフセット</span>
-                <span class="feature-tag">解像度設定</span>
-                <span class="feature-tag">句読点削除</span>
-            </div>
-        </a>
-    </div>
-
-    <div class="section-title">特徴</div>
-
-    <div class="info-grid">
-        <div class="info-card">
-            <h3>🔒 プライバシー安全</h3>
-            <p>ファイルはブラウザ内でのみ処理。サーバーへのアップロードは一切ありません。</p>
-        </div>
-        <div class="info-card">
-            <h3>🎯 FCP特化</h3>
-            <p>Final Cut Proが日本語自動字幕に非対応のため、外部SRTからの変換をサポート。</p>
-        </div>
-        <div class="info-card">
-            <h3>📱 クロスプラットフォーム</h3>
-            <p>Chrome / Safari / Firefox / Edge。Mac / Windows / Linux対応。</p>
-        </div>
-        <div class="info-card">
-            <h3>⚡ インストール不要</h3>
-            <p>ブラウザでアクセスするだけ。ログインもサブスクも不要です。</p>
-        </div>
-    </div>
-
-    <div class="footer">
-        MIT License · <a href="https://github.com/aboshiDaisuke/srt-to-fcpxml" target="_blank">GitHub</a>
-    </div>
-
-</body>
 
 </html>
